[gd_scene load_steps=16 format=2]

[ext_resource path="res://Eye.gd" type="Script" id=1]
[ext_resource path="res://gfx/eye.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 12 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "leftUp",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "leftDown",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "rightUp",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "rightDown",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 4.57121
height = 2.17074

[sub_resource type="CircleShape2D" id=12]
radius = 94.4376

[sub_resource type="CapsuleShape2D" id=13]
radius = 5.02911
height = 1.72115

[node name="Eye" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.22976, 1.04056 )
shape = SubResource( 11 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.76777, 0.707108 )
shape = SubResource( 13 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
